# example-rust-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.devcontainer/: docker-compose.yml
.github/workflows/: ci.yml
src/: handlers.rs  lib.rs  main.rs  models.rs
